Fixed up right column button spacing issues

--- a/app/assets/stylesheets/layout_old/right-column.scss
+++ b/app/assets/stylesheets/layout_old/right-column.scss
@@ -81,5 +81,6 @@
     position: relative;
     float: right;
     padding-right: 0;
+    margin-top: 45px;
   }
 }
